2007-07-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeBuilder.cs: Implemented IsCOMObjectImpl.

2007-07-04  Atsushi Enomoto  <atsushi@ximian.com>

	* DynamicMethod.cs : 2.0 API fix.

2007-06-21  Zoltan Varga  <vargaz@gmail.com>

	* DynamicMethod.cs: Applied patch from Robert Jordan (robertj@gmx.net). Add
	a destructor which frees the runtime data for the method.

2007-05-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeBuilder.cs: Changed HasElementTypeImpl to return false on 2.0
	profile when type is not baked.

2007-05-21  Jb Evain  <jb@nurv.fr>

	* TypeBuilder.cs
	  MethodBuilder.cs:
		Tag methods and types as HasSecurity when adding a
		SuppressUnmanagedCodeSecurityAttribute on them.
		Makes peverify happy.

2007-05-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeBuilder.cs (GetField): Return MonoField instance if the type is
	already created. Fixed other part of bug #81368.

2007-05-16  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (GetFields): Return MonoField objects if the type is already
	created.

	* FieldBuilder.cs (SetValue): Make this not supported again.
	
	* FieldBuilder.cs: Support calling SetValue (). Fixes #81638.

2007-05-06  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (CreateType): Fix build.
	
	* TypeBuilder.cs (.ctor): Convert null parent to typeof (object). Fixes #81530.

	* TypeBuilder.cs (UnderlyingSystemType): Remove commented out code.

2007-04-15  Alp Toker  <alp@atoker.com>

	* ConstructorBuilder.cs: Make use of
	ConstructorInfo.TypeConstructorName/ConstructorName.

2007-04-09  Alp Toker  <alp@atoker.com>

	* ConstructorBuilder.cs: Remove redundant overrides.

2007-04-03  Marek Safar  <marek.safar@gmail.com>

	* OpCodes.cs: Removed obsolete opcodes.

2007-04-03  Alp Toker  <alp@atoker.com>

	* GenericTypeParameterBuilder.cs: SetInterfaceConstraints(Type[]) is
	params.
	* MethodBuilder.cs: MakeGenericMethod(Type[]) is params.

2007-03-19  Marek Safar  <marek.safar@gmail.com>
