@@ -1,5 +1,11 @@
 2007-07-06  Gert Driesen  <drieseng@users.sourceforge.net>
 
+	* TypeBuilderTest.cs: Improved tests for SetParent.
+	* ModuleBuilderTest.cs: Added test for creating non-abstract
+	interface.
+
+2007-07-06  Gert Driesen  <drieseng@users.sourceforge.net>
+
 	* TypeBuilderTest.cs: Enabled test for IsCOMObject. Improved test
 	for IsImport.
 
